--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "monaco-editor": "^0.13.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
